# macos_photo_exporter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/macos_photo_exporter/: __init__.py  macos_photo_exporter.py
tests/: test_macos_photo_exporter.py  testing_constants.py
tests/Test Photos Library.photoslibrary/: test_macos_photo_exporter.py
tests/Test Photos Library.photoslibrary/database/: Photos.sqlite  Photos.sqlite-shm  Photos.sqlite-wal
tests/Test Photos Library.photoslibrary/database/search/: psi.sqlite  psi.sqlite-shm
tests/Test Photos Library.photoslibrary/internal/csutaxonomy/: CSUTaxonomy.sqlite
tests/Test Photos Library.photoslibrary/private/com.apple.photolibraryd/: appPrivateData.plist
tests/Test Photos Library.photoslibrary/resources/journals/: Asset-snapshot.plj  FetchingAlbum.plist  Folder-snapshot.plj  Folder.plist  HistoryToken.plist  ImportSession-snapshot.plj  ImportSession.plist  MigrationHistory-change.plj
tests/Test_Photos_Library.photoslibrary/database/: Photos.sqlite  Photos.sqlite-shm  Photos.sqlite-wal
tests/Test_Photos_Library.photoslibrary/database/search/: psi.sqlite
tests/Test_Photos_Library.photoslibrary/private/com.apple.Photos/: appPrivateData.plist
tests/Test_Photos_Library.photoslibrary/private/com.apple.photolibraryd/: appPrivateData.plist
tests/Test_Photos_Library.photoslibrary/resources/journals/: Album.plist  Asset.plist  Folder-snapshot.plj  Folder.plist  HistoryToken.plist  ImportSession-change.plj  MigrationHistory-change.plj  SocialGroup.plist
(+119 files in other folders)
