[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "macos_photo_exporter"
version = "0.0.1"
authors = [
  { name="Ray Cook", email="lreydelmundo@gmail.com" },
]
description = "This script is used to export Photos from the MacOS Photos application based on the date range specified."
readme = "README.md"
requires-python = ">=3.13.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/RayCookIII/macos_photo_exporter"
Issues = "https://github.com/RayCookIII/macos_photo_exporter/issues"